Update generated slides

--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,6 @@ The compiler that emits JavaScript you can be proud of!</p>
 <section >
 <p><img src="images/elmish.png" alt="Elmish architecture" /><!-- .element height="50%" width="50%" --></p>
 </section>
-</section>
 <section >
 <h2>Elmish resources</h2>
 <ul>
@@ -1457,8 +1456,17 @@ The compiler that emits JavaScript you can be proud of!</p>
 <li>Fable <a href="https://github.com/fable-compiler/fable-powerpack">powerpack</a></li>
 <li><a href="https://mangelmaxime.github.io/html-to-elmish/">HTML to elmish</a></li>
 </ul>
+</section>
+</section>
+<section >
 <h3>Demo time</h3>
+<ul>
+<li><a href="https://www.youtube.com/watch?v=_jCwsmrd-mM&amp;t=5s">Minesweeper</a></li>
+</ul>
+</section>
+<section >
 <h3>Questions?</h3>
+<h1>Thank You!</h1>
 </section>
 
 
